MonthlyIB/front/styles/global.css
@import url("https://cdn.jsdelivr.net/npm/pretendard/dist/web/static/pretendard.css");
@import url("https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Gothic+A1:wght@400;500;700&family=Nanum+Gothic:wght@400;700&family=Nanum+Pen+Script&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");

:root {
  /*******************
          Color Pallte
      *******************/

  /* primary */
  --primary01: #51346c;
  --primary02: #391f52;
  --primary03: #6b4d87;
  --primary04: #51ae80;
  /*******************
          Shadow
      *******************/

  /* Default */
  --shdow-df: 2px 2px 2px rgba(81, 52, 108, 0.3);
  --shadow-25: 2px 2px 4px rgba(0, 0, 0, 0.25);
}

* {
  box-sizing: border-box;
  scroll-margin-top: 50px;
}

html {
  width: 100%;
  height: 100%;
  font-size: 10px;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0;
  font-size: 10px;
  color: #000;
  line-height: 1.2rem;
  font-family:
    "Pretendard",
    "Roboto",
    "Noto Sans KR",
    "Malgun Gothic",
    "Apple SD Gothic Neo",
    "Segoe UI",
    "돋움",
    sans-serif;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
menu,
nav,
section,
summary {
  display: block;
}

input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

html,
body {
  width: 100%;
}

html {
  overflow-x: hidden;
}

audio,
canvas,
progress,
video {
  display: inline-block;
  vertical-align: baseline;
}

audio:not([controls]) {
  display: none;
  height: 0;
}

[hidden],
template {
  display: none;
}

a {
  background-color: transparent;
  text-decoration: none;
}

a:active,
a:hover {
  outline: 0;
  text-decoration: none;
}

abbr[title] {
  border-bottom: 1px dotted;
}

b,
strong {
  font-weight: bold;
}

dfn {
  font-style: italic;
}

h1 {
  text-decoration: none;
}

mark {
  background: #ff0;
  color: #000;
}

small {
  font-size: 80%;
}

sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sup {
  top: -0.5em;
}

sub {
  bottom: -0.25em;
}

img {
  border: 0;
  max-width: 100%;
  height: auto;
}

svg:not(:root) {
  overflow: hidden;
}

figure {
  margin: 0;
}

hr {
  box-sizing: content-box;
  height: 0;
}

pre {
  overflow-x: hidden;
}

code,
kbd,
pre,
samp {
  font-family: monospace, monospace;
  font-size: 1em;
}

button,
input,
optgroup,
select,
textarea {
  color: inherit;
  font: inherit;
  margin: 0;
}

button {
  overflow: visible;
  outline: none;
}

button,
select {
  text-transform: none;
}

button {
  background: transparent;
  border: none;
  box-sizing: border-box;
}

button,
html input[type="button"],
input[type="reset"],
input[type="submit"] {
  -webkit-appearance: button;
  cursor: pointer;
}

button[disabled],
html input[disabled] {
  cursor: not-allowed;
}

button::-moz-focus-inner,
input::-moz-focus-inner {
  border: 0;
  padding: 0;
}

input {
  line-height: normal;
}

select {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

input[type="checkbox"],
input[type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

fieldset {
  border: none;
  margin: 0;
  padding: 0;
}

legend {
  border: 0;
  padding: 0;
}

textarea {
  overflow: auto;
}

optgroup {
  font-weight: bold;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

td,
th {
  padding: 0;
}

dl,
dt,
dd,
ol,
ul,
li,
span,
h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
  padding: 0;
  line-height: 1.2;
}

a,
img,
input,
select,
textarea {
  color: #000;
}

:focus {
  -moz-outline-style: none;
}

input:focus {
  outline: none;
}

form {
  margin: 0;
}

nav {
  margin: 0;
}

input::placeholder {
  color: #fff;
}

input.readonly {
  color: #7f7f7f !important;
}

input,
select {
  /*-webkit-appearance: none;*/
  -webkit-border-radius: 0;
}

.ql-font-serif {
  font-family: serif;
}
.ql-font-monospace {
  font-family: monospace;
}
/* Header */

header {
  width: 100%;
  height: 8rem;
  background: #fff;
  z-index: 9995;
  position: fixed;
}

header h1 a {
  width: 4rem;
  height: 4.8rem;
}

header h1 a img {
  display: block;
  width: 100%;
  height: 100%;
}

header nav {
  height: 100%;
}

header nav > ul {
  display: flex;
  align-items: center;
  height: 100%;
}

header nav > ul > li {
  position: relative;
  padding: 2.9rem 1.9rem;
}

header nav > ul > li > a {
  display: block;
  font-size: 1.8rem;
  font-weight: 700;
}

header nav > ul > li:hover > a {
  color: var(--primary01);
}

main {
  padding-top: 8rem;
  min-height: calc(100vh - 10rem - 10rem); /* 8rem 헤더, 6rem footer 가정 */
}

section {
  max-width: 110rem;
  width: 100%;
  margin: 0 auto;
  height: auto;
  padding: 7.4rem 0;
}

footer {
  background: #1a1122;
  width: 100%;
  padding: 3rem 0;
  text-align: center;
}

/* Header end */

.swiper_slide {
  width: 26rem;
  background: var(--primary01);
  border-radius: 1rem;
  overflow: hidden;
}

.width_content {
  max-width: 110rem;
  width: 100%;
  margin: 0 auto;
  min-height: 88rem;
  padding: 8rem 0 8.8rem;
}

.width_content.scheduling {
  width: 100%;
  padding: 8rem 0 0;
}

.width_content.min_content {
  width: 54rem;
}

.width_content.scheduling .header_tit_wrap {
  width: 110rem;
  margin: 0 auto;
}

.header_flex {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  padding: 7.2rem 0;
}
/* ... */

